<resources>
    <!-- APP INFO -->
    <string name="app_name">Conscience</string>
    <string name="action_settings">Settings</string>
    <!-- MAIN MENU -->
    <string name="title">Messages from my Conscience</string>
    <string name="start_button">New Game</string>
    <!-- GENE SCREEN -->
    <string name="motherLabel">Your Mother is: </string>
    <string name="fatherLabel">Your Father is: </string>
    <string name="characterLabel">Your name is: </string>
    <string name="PhysLabel">Physical Ability: </string>
    <string name="MentLabel">Mental Ability: </string>
    <string name="EmotLabel">Emotional Ability: </string>
    <string name="startLife_button">Start your life.</string>
    <string name="reRoll">Recreate Chars</string>
    <!-- PLAYER SCREEN -->
    <string name="energyLabel">Energy:</string>
    <string name="stressLabel">Stress:</string>
    <string name="happyLabel">Happiness:</string>
    <string name="editAction">Enter action here:</string>
</resources>
